--- a/app/views/electricity_counters/_form.html.erb
+++ b/app/views/electricity_counters/_form.html.erb
@@ -2,7 +2,7 @@
 
   <div>
     <%= form.label :'Показник лічильника' %><br>
-    <%= form.number_field(:value,{:class => 'form-control'})%><br>
+    <%= form.number_field(:value,{:max => 999999,:size => 7, :class => 'form-control'})%><br>
   </div>
 
 
