--- a/app/views/residents/_resident.html.erb
+++ b/app/views/residents/_resident.html.erb
@@ -4,7 +4,7 @@
     <td><%= resident.lastname %></td>
     <td><%= resident.name %></td>
     <td><%= resident.surname %></td>
-    <td><%= resident.phone %></td>
+    <td nowrap><%= resident.phone %></td>
     <td><%= resident.birthday %></td>
     <td><%= resident.owner %></td>
     <td><%= resident.tenant %></td>
