--- a/app/views/water_counters/show.html.erb
+++ b/app/views/water_counters/show.html.erb
@@ -15,13 +15,12 @@
   </tr>
   <%= form_with model: [@apartment, @water_counter] do |form| %>
   <tr>
-    <td><div ><%= form.number_field(:value,{:size => 7,method: :patch})%></td></div>
+    <td><div ><%= form.number_field(:value,{:maxlength => 7,method: :patch})%></td></div>
     <td> <%= form.submit  ({:class => 'btn btn-success', :value => 'Зберегти'})%></td>
     <% end %>
 
 
     <% if current_apartment.admin?  %>
-      <td><%= link_to  'Змінити',edit_apartment_water_counter_path(@apartment, water_counter: @water_counter)%></td>
       <td><%= link_to ' Видалити', apartment_water_counter_path(@apartment, water_counter: @water_counter),
                     method: :delete,
                     data: { confirm: "Ви впевнені?" } %></td>
