--- a/app/views/electricity_counters/show.html.erb
+++ b/app/views/electricity_counters/show.html.erb
@@ -21,8 +21,7 @@
 <% end %>
 
   <% if current_apartment.admin?  %>
-    <td><%= link_to  'Змінити',edit_apartment_electricity_counter_path(@apartment, water_counter: @electricity_counter)%></td>
-    <td><%= link_to ' Видалити', apartment_electricity_counter_path(@apartment, water_counter: @electricity_counter),
+    <td><%= link_to ' Видалити', apartment_electricity_counter_path(@apartment, electricity_counter: @electricity_counter),
                     method: :delete,
                     data: { confirm: "Ви впевнені?" } %></td>
   <% end %>
