--- a/app/views/residents/_form.html.erb
+++ b/app/views/residents/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div>
     <%= form.label :'Телефон' %><br>
-    <%= form.telephone_field(:phone,{:class => 'form-control'})%><br>
+    <%= form.telephone_field(:phone,{:maxlength => 18, :class => 'form-control'})%><br>
   </div>
 
   <div>
