--- a/app/views/water_counters/_form.html.erb
+++ b/app/views/water_counters/_form.html.erb
@@ -1,13 +1,12 @@
 <%= form_with model: [@apartment, @water_counter] do |form| %>
 
-  <div>
-    <%= form.label :'Показник лічильника' %><br>
-    <%= form.number_field(:value,{:class => 'form-control'})%><br>
-  </div>
+   <div>
+       <%= form.label :'Показник лічильника' %><br>
+       <%= form.number_field(:value,{:max => 999999, :class => 'form-control'})%><br>
+   </div>
 
 
-  <div>
-    <%= form.submit ({:class => 'btn btn-success'})%>
-  </div>
-
+   </div>
+      <%= form.submit ({:class => 'btn btn-success'})%>
+   </div>
 <% end %>
